<resources>
    <string name="app_name">Keeper Productivity</string>
    <string name="checkMark">"\u2713"</string>
    <string name="title_activity_tasks_board">TasksBoard</string>
    <string name="add_task_setting">Add a new task</string>
    <string name="checkbox_string">If clicked will remove item</string>
    <string name="nameAttribute">Name:</string>
    <string name="task_name">Task Name</string>
    <string name="x">X</string>
    <string name="new_task">New Task</string>
    <string name="main_act_title">Lists</string>
    <string name="repeat">Repeat:</string>
    <string name="habbit_task">Habbit/Task</string>
    <string name="habit_task">Habit/Task</string>
    <string name="how_often">How often?</string>
    <string name="days">Days</string>
    <string name="at_what_time">At what time?</string>
    <string name="hh_mm">hh:mm</string>
</resources>
