<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jaceriehl.keeperproductivity.NewTaskActivity">

    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="120dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/mainWhite"
            android:orientation="horizontal">

            <Button
                android:id="@+id/closeNewTask"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/mainWhite"
                android:text="@string/x"
                android:textColor="@color/checkBoxes"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/newTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/mainWhite"
                android:text="@string/new_task"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/newTaskCheck"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/mainWhite"
                android:text="@string/checkMark"
                android:textColor="@color/ghostText"
                android:textColorLink="@color/ghostText"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_weight="1"
                android:text="@string/nameAttribute"
                android:textColor="@color/lessSubtleText"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/enterTaskName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/task_name"
                android:inputType="textPersonName" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="448dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/habit_task"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/htSpinner"
                android:layout_width="147dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/repeatTV"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Repeat:"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/repeatSpinner"
                android:layout_width="243dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/blankLayout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/numDaysTV"
                android:layout_width="106dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/how_often"
                android:textColor="@color/lessSubtleText"
                android:textSize="18sp" />

            <EditText
                android:layout_width="115dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/days"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeLayout"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeTV"
                android:layout_width="122dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/at_what_time"
                android:textColor="@color/lessSubtleText"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/pickTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hh_mm"
                android:inputType="time" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
